SERVER-86746: keep kafka consumer group active

GitOrigin-RevId: 1236a2df94ddcd5f882a7d5c91a4ac23f38da386